feat: added unit tests