@@ -24,20 +24,21 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'net.datafaker:datafaker:2.4.2'
-
-	// https://mvnrepository.com/artifact/io.github.wimdeblauwe/error-handling-spring-boot-starter
 	implementation 'io.github.wimdeblauwe:error-handling-spring-boot-starter:4.5.0'
-
 
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.mockito:mockito-core:5.0.0'
+	testImplementation 'org.mockito:mockito-junit-jupiter:5.0.0'
 
+	testRuntimeOnly 'org.mockito:mockito-inline:5.0.0'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
 	useJUnitPlatform()
 }
